--- a/backend/suitenest/pom.xml
+++ b/backend/suitenest/pom.xml
@@ -60,6 +60,13 @@
 			<artifactId>spring-boot-configuration-processor</artifactId>
 			<optional>true</optional>
 		</dependency>
+
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt-api</artifactId>
+			<version>0.11.5</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
