--- a/backend/suitenest/src/main/resources/application.properties
+++ b/backend/suitenest/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 server.port=9192
 
-spring.datasource.url=jdbc:mysql://localhost:3306/suitenest_db
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=${DATASOURCE_URL}
+spring.datasource.username=${DATASOURCE_USER}
+spring.datasource.password=${DATASOURCE_PASSWORD}
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
-
+# PostgreSQL JDBC driver
+spring.datasource.driver-class-name=org.postgresql.Driver
+# PostgreSQL dialect for Hibernate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.servlet.multipart.max-file-size=500KB
 spring.servlet.multipart.max-request-size=500KB
@@ -15,9 +16,10 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 
-
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+frontend.url=${FRONTEND_URL}
 
 # App Properties
 
