Backend - bug fixed - ERROR: invalid large-object descriptor: 0

--- a/backend/suitenest/src/main/resources/application.properties
+++ b/backend/suitenest/src/main/resources/application.properties
@@ -6,8 +6,8 @@ spring.datasource.password=${DATASOURCE_PASSWORD}
 
 # PostgreSQL JDBC driver
 spring.datasource.driver-class-name=org.postgresql.Driver
-# PostgreSQL dialect for Hibernate
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+## PostgreSQL's dialect for Hibernate
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.servlet.multipart.max-file-size=500KB
 spring.servlet.multipart.max-request-size=500KB
