--- a/backend/suitenest/src/main/resources/application.properties
+++ b/backend/suitenest/src/main/resources/application.properties
@@ -9,8 +9,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 ## PostgreSQL's dialect for Hibernate
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-spring.servlet.multipart.max-file-size=500KB
-spring.servlet.multipart.max-request-size=500KB
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
